fix overflow issue (for real)

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer utilities {
-  .max-w-xxs {
-    max-width: 16rem
-  }
-}
